# AV_Projects

./: README.md
VisionGuide/: settings.gradle
VisionGuide/app/: build.gradle
VisionGuide/app/src/main/: AndroidManifest.xml
VisionGuide/app/src/main/cpp/: CMakeLists.txt  build_info.cpp  llama_jni.cpp
VisionGuide/app/src/main/java/com/example/visionguide/: ClipPreprocessor.kt  MainActivity.kt  Projector.kt
VisionGuide/app/src/main/java/com/example/visionguide/lama/: LlamaBridge.kt
VisionGuide/app/src/main/java/com/example/visionguide/ui/theme/: Color.kt  Theme.kt  Type.kt
VisionGuide/app/src/main/res/drawable/: ic_transcript.xml  ic_waveform.xml  waveform_placeholder.xml
VisionGuide/app/src/main/res/layout/: activity_main.xml
VisionGuide/app/src/main/res/values/: strings.xml  themes.xml
VisionGuide/gradle/wrapper/: gradle-wrapper.properties
